2008-01-18  Dan Winship  <danw@gnome.org>

	* configure.in: require glib 2.15.3, not 2.15.0, since
	AM_PATH_GLIB_2_0 didn't know about gio until post-2.15.2. Pointed
	out by Matthew Barnes, #510216.

2008-01-18  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-domain.c
	(soup_auth_domain_set_generic_auth_callback):
	(soup_auth_domain_check_password): add a new generic auth callback
	that can be used with any subclass to do cleartext password
	checking against messages. Suggested by Mathias Hasselmann.

	* libsoup/soup-auth-domain-basic.c: Implement generic auth

	* libsoup/soup-auth-domain-digest.c: Implement generic auth.
	(soup_auth_domain_digest_evil_check_password): Gone, use the
	generic version now.

2008-01-17  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-digest.c (soup_auth_digest_compute_hex_urp)
	(soup_auth_digest_compute_hex_a1)
	(soup_auth_digest_compute_response): cast the second arg to
	g_checksum_update to (guchar *) to avoid warnings

2008-01-16  Dan Winship  <danw@gnome.org>

	* libsoup/soup-headers.c (soup_headers_parse_status_line): Deal
	with Shoutcast servers, which return "ICY 200 OK", but are
	otherwise straight HTTP/1.0. #502325, Wouter Cloetens.

	* tests/header-parsing.c (resptests): add a test for it

2008-01-16  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-manager.c (authorize_handler, etc): Allow the
	session authenticate signal to be handled asynchronously, by
	pausing the message and then authenticating the auth later.
	(auth_type_compare_func): make this work. oops.
	(extract_challenge): plug leak

	* libsoup/soup-auth-manager-ntlm.c: Make this work async too.

	* libsoup/soup-headers.c (soup_header_parse_list):
	(soup_header_parse_param_list): plug leaks

	* tests/auth-test.c (do_async_auth_test): test async auth

	* docs/reference/client-howto.xml (Handling Authentication):
	mention async auth

2008-01-16  Dan Winship  <danw@gnome.org>

	* configure.in: Bomb out if glib 2.15.0 isn't found.